// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stegvisning - Start > rendrer slik den skal med navn, med riktig heading, bilde, tekst og knapper 1`] = `
<DocumentFragment>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          stegvisning.start.ingress
        </p>
        <ul
          class="_list_09901f"
        >
          <li>
            <p
              class="navds-body-long navds-body-long--large"
            >
              <span
                class="_ellipse_09901f _ellipse__blue_09901f"
              />
              stegvisning.start.list_item1
            </p>
          </li>
          <li>
            <p
              class="navds-body-long navds-body-long--large"
            >
              <span
                class="_ellipse_09901f _ellipse__purple_09901f"
              />
              stegvisning.start.list_item2 
            </p>
          </li>
          <li>
            <p
              class="navds-body-long navds-body-long--large"
            >
              <span
                class="_ellipse_09901f _ellipse__green_09901f"
              />
              stegvisning.start.list_item3 
            </p>
          </li>
        </ul>
        <p
          class="navds-body-long navds-body-long--large"
        >
          stegvisning.start.ingress_2
        </p>
        <button
          class="_button_09901f navds-button navds-button--primary navds-button--medium"
          type="submit"
        >
          <span
            class="navds-label"
          >
            stegvisning.start.button
          </span>
        </button>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
    <a
      class="navds-link _link_09901f navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      stegvisning.start.link
      <svg
        aria-labelledby="title-r0"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-r0"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Start > rendrer slik den skal med vedtak om alderspensjon 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="_alert_09901f navds-alert navds-alert--warning navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r1"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r1"
      >
        Advarsel
      </title>
      <path
        clip-rule="evenodd"
        d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25M12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75m-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      Du har pensjon. Vil du sjekke hva du kan få hvis du endrer uttaket av alderspensjon, må du gå til 
      <a
        class="navds-link navds-link--action navds-link--inline-text"
        href="https://www.nav.no/pselv/simulering.jsf"
        target="_blank"
      >
        detaljert pensjonskalkulator
        <svg
          aria-labelledby="title-r2"
          fill="none"
          focusable="false"
          height="1.25rem"
          role="img"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r2"
          >
            application.global.external_link
          </title>
          <path
            clip-rule="evenodd"
            d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </a>
      .
    </div>
  </div>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          Du har nå 
          <strong>
            50 % alderspensjon
          </strong>
          . Her kan du sjekke hva du kan få hvis du vil endre alderspensjonen din.
          <br />
          <br />
        </p>
        <p
          class="navds-body-long navds-body-long--medium"
        >
          stegvisning.start.endring.ingress_2
        </p>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
    <a
      class="navds-link _link_09901f navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      stegvisning.start.link
      <svg
        aria-labelledby="title-r3"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-r3"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Start > rendrer slik den skal med vedtak om alderspensjon og AFP offentlig 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="_alert_09901f navds-alert navds-alert--warning navds-alert--medium"
  >
    <svg
      aria-labelledby="title-ra"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-ra"
      >
        Advarsel
      </title>
      <path
        clip-rule="evenodd"
        d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25M12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75m-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      Du har pensjon. Vil du sjekke hva du kan få hvis du endrer uttaket av alderspensjon, må du gå til 
      <a
        class="navds-link navds-link--action navds-link--inline-text"
        href="https://www.nav.no/pselv/simulering.jsf"
        target="_blank"
      >
        detaljert pensjonskalkulator
        <svg
          aria-labelledby="title-rb"
          fill="none"
          focusable="false"
          height="1.25rem"
          role="img"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-rb"
          >
            application.global.external_link
          </title>
          <path
            clip-rule="evenodd"
            d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </a>
      .
    </div>
  </div>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          Du har nå 
          <strong>
            50 % alderspensjon
          </strong>
           og 
          <strong>
            AFP i offentlig sektor
          </strong>
          . Her kan du sjekke hva du kan få hvis du vil endre alderspensjonen din.
          <br />
          <br />
        </p>
        <p
          class="navds-body-long navds-body-long--medium"
        >
          stegvisning.start.endring.ingress_2
        </p>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
    <a
      class="navds-link _link_09901f navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      stegvisning.start.link
      <svg
        aria-labelledby="title-rc"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-rc"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Start > rendrer slik den skal med vedtak om alderspensjon og AFP privat 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="_alert_09901f navds-alert navds-alert--warning navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r7"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r7"
      >
        Advarsel
      </title>
      <path
        clip-rule="evenodd"
        d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25M12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75m-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      Du har pensjon. Vil du sjekke hva du kan få hvis du endrer uttaket av alderspensjon, må du gå til 
      <a
        class="navds-link navds-link--action navds-link--inline-text"
        href="https://www.nav.no/pselv/simulering.jsf"
        target="_blank"
      >
        detaljert pensjonskalkulator
        <svg
          aria-labelledby="title-r8"
          fill="none"
          focusable="false"
          height="1.25rem"
          role="img"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r8"
          >
            application.global.external_link
          </title>
          <path
            clip-rule="evenodd"
            d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </a>
      .
    </div>
  </div>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          Du har nå 
          <strong>
            50 % alderspensjon
          </strong>
           og 
          <strong>
            AFP i privat sektor
          </strong>
          . Her kan du sjekke hva du kan få hvis du vil endre alderspensjonen din.
          <br />
          <br />
        </p>
        <p
          class="navds-body-long navds-body-long--medium"
        >
          stegvisning.start.endring.ingress_2
        </p>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
    <a
      class="navds-link _link_09901f navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      stegvisning.start.link
      <svg
        aria-labelledby="title-r9"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-r9"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </section>
</DocumentFragment>
`;

exports[`stegvisning - Start > rendrer slik den skal med vedtak om alderspensjon og uføregrad 1`] = `
<DocumentFragment>
  <div
    aria-live="polite"
    class="_alert_09901f navds-alert navds-alert--warning navds-alert--medium"
  >
    <svg
      aria-labelledby="title-r4"
      class="navds-alert__icon"
      fill="none"
      focusable="false"
      height="1em"
      role="img"
      viewBox="0 0 24 24"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="title-r4"
      >
        Advarsel
      </title>
      <path
        clip-rule="evenodd"
        d="M12 2.25a.75.75 0 0 1 .656.387l9.527 17.25A.75.75 0 0 1 21.526 21H2.474a.75.75 0 0 1-.657-1.113l9.526-17.25A.75.75 0 0 1 12 2.25M12 8.75a.75.75 0 0 1 .75.75v4a.75.75 0 0 1-1.5 0v-4a.75.75 0 0 1 .75-.75m-1 7.75a1 1 0 1 1 2 0 1 1 0 0 1-2 0"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
    <div
      class="navds-alert__wrapper navds-alert__wrapper--maxwidth navds-body-long navds-body-long--medium"
    >
      Du har pensjon. Vil du sjekke hva du kan få hvis du endrer uttaket av alderspensjon, må du gå til 
      <a
        class="navds-link navds-link--action navds-link--inline-text"
        href="https://www.nav.no/pselv/simulering.jsf"
        target="_blank"
      >
        detaljert pensjonskalkulator
        <svg
          aria-labelledby="title-r5"
          fill="none"
          focusable="false"
          height="1.25rem"
          role="img"
          viewBox="0 0 24 24"
          width="1.25rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r5"
          >
            application.global.external_link
          </title>
          <path
            clip-rule="evenodd"
            d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </a>
      .
    </div>
  </div>
  <section
    class="_section_67454f _section__largePadding_67454f _section__marginBotton_67454f"
  >
    <div
      class="_wrapper_09901f"
    >
      <img
        alt=""
        class="_image_09901f"
        src="/pensjon/kalkulator/src/assets/frida.svg"
      />
      <div
        class="_wrapperText_09901f"
      >
        <h2
          class="navds-heading navds-heading--medium navds-typo--spacing"
        >
          stegvisning.start.title Ola!
        </h2>
        <p
          class="navds-body-long navds-body-long--large"
        >
          Du har nå 
          <strong>
            50 % alderspensjon
          </strong>
           og 
          <strong>
            80 % uføretrygd
          </strong>
          . Her kan du sjekke hva du kan få hvis du vil endre alderspensjonen din.
          <br />
          <br />
        </p>
        <p
          class="navds-body-long navds-body-long--medium"
        >
          stegvisning.start.endring.ingress_2
        </p>
        <button
          class="navds-button navds-button--tertiary navds-button--medium"
          type="button"
        >
          <span
            class="navds-label"
          >
            stegvisning.avbryt
          </span>
        </button>
      </div>
    </div>
    <a
      class="navds-link _link_09901f navds-link--action navds-link--inline-text"
      href="/personopplysninger"
      target="_blank"
    >
      stegvisning.start.link
      <svg
        aria-labelledby="title-r6"
        fill="none"
        focusable="false"
        height="1.25rem"
        role="img"
        viewBox="0 0 24 24"
        width="1.25rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="title-r6"
        >
          application.global.external_link
        </title>
        <path
          clip-rule="evenodd"
          d="M20.532 3.471A.75.75 0 0 1 20.75 4v7.5a.75.75 0 0 1-1.5 0V5.81l-8.72 8.72a.75.75 0 1 1-1.06-1.06l8.72-8.72H12.5a.75.75 0 0 1 0-1.5H20c.206 0 .393.083.529.218l.001.002zM4.75 9A.25.25 0 0 1 5 8.75h7a.75.75 0 0 0 0-1.5H5A1.75 1.75 0 0 0 3.25 9v10c0 .966.784 1.75 1.75 1.75h10A1.75 1.75 0 0 0 16.75 19v-7a.75.75 0 0 0-1.5 0v7a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </a>
  </section>
</DocumentFragment>
`;
